# comment-on-diff

./: .editorconfig  .flake8  CODEOWNERS  Dockerfile  Makefile  README.md  action.yaml  main.py  pyproject.toml  test_main.py
.github/: comment-on-diff.yaml
.github/workflows/: ci.yaml  notices.yaml  publish.yaml
