[tool.poetry]
name = "comment-on-diff"
version = "0.1.0"
description = "Add a comment on a PR depending on a diff on a folder or file."
authors = ["Alexandre Morignot <erdnaxeli@cervoi.se>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
gitpython = "^3.1.8"
pygithub = "^1.53"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]
mypy = "^0.782"
black = "^20.8b1"
pytest = "^6.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
