[tool.poetry]
name = "comment-on-diff"
version = "0.1.0"
description = "Add a comment on a PR depending on a diff on a folder or file."
authors = ["Alexandre Morignot <erdnaxeli@cervoi.se>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
gitpython = "^3.1.8"
pygithub = "^2.0"
pyyaml = "^6.0"

[tool.poetry.dev-dependencies]
mypy = "*"
pytest = "^7.0"
ruff = "*"
types-PyYAML = "^6.0.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = [
    # pycodestyle
  "E", "W",
  # Pyflakes
  "F",
  # flake8-bugbear
  "B",
  # pydocstyle
  "D",
  # flake8-logging-format
  "G",
  # isort
  "I",
  # mcabbe
  "C90",
  # pep8-naming
  "N",
  # flake8-comprehensions
  "C4",
  # flake8-datetimez
  #"DTZ",
  # flake8-simplify
  "SIM",
  # flake8-debugger
  "T",
  # flake8-pie
  "PIE",
  # flake8-upgrade
  "UP",
  # Ruff-specific rules
  "RUF",
]
ignore = [
  # cached-instance-method
  "B019",
  # missing docstrings
  "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",
  # one-blank-line-before-class
  "D203",
  # multi-line-summary-first-line
  "D212",
  # first line should not start with "This"
  "D404",
  # conflict with black
  "E501", "D206", "W191",
  # explicit-f-string-type-conversion
  "RUF010",
  # mutable-class-default
  "RUF012",
  # Use X | Y for type annotations
  "UP007",
  # try - except - pass
  "SIM105",
  # ternary operator
  "SIM108",
]

[tool.ruff.isort]
combine-as-imports = true
extra-standard-library = ["zoneinfo"]
lines-after-imports = 2
section-order = [
  "future",
  "standard-library",
  "third-party",
  "meilleursagents",
  "first-party",
  "tests",
  "local-folder",
]

[tool.ruff.isort.sections]
meilleursagents = [
  "ma_apiclients",
  "ma_bestranking",
  "ma_celery_utils",
  "ma_flask_auth",
  "ma_flask_common",
  "ma_flask_smorest_common",
  "ma_fs",
  "ma_jinja_common",
  "ma_models",
  "ma_pubsub",
]
tests = ["tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
#magic-trailing-comma = "respect"
line-ending = "auto"
